# deep-space-derby

./: .flake.nix.swp  .gitignore  Cargo.toml  diff  docker-compose.yml  flake.nix  package-lock.json  package.json  playwright.config.ts  wrangler.toml
.cargo/: config.toml
.zed/: settings.json
app/: Cargo.toml
app/src/: app.rs  extractors.rs  hydrate.rs  lib.rs  middleware.rs  router.rs  screens.rs  serve_files.rs  server_fns.rs
app/src/adapters/: mod.rs
app/src/adapters/event_log/: durable_object.rs  file.rs  in_memory.rs  mod.rs
app/src/adapters/game_service/: axum_router.rs  durable_object.rs  mod.rs
app/src/adapters/game_state/: durable_object.rs  file.rs  in_memory.rs  mod.rs
app/src/components/: mod.rs
app/src/components/layouts/: horizontal_stack.rs  mod.rs  vertical_stack.rs
app/src/components/molecules/: text_input.rs
app/src/handlers/: create_game.rs  event_log.rs  forward_command.rs  join_game.rs  mod.rs  on_connect.rs  register_command.rs  wake_up.rs
app/src/js/: audio_context.js  event_buffer_flush.js
app/src/ports/: event_log.rs  game_service.rs  game_state.rs  mod.rs
app/src/screens/: game_wrapper.rs  host.rs  main_menu.rs  mod.rs  player.rs  router.rs
app/src/screens/host/: lobby.rs  mod.rs  pre_game.rs  race.rs  results.rs
app/src/screens/player/: join.rs  lobby.rs  pregame.rs  race.rs  summary.rs  wait.rs
app/src/server_fns/: mod.rs
app/src/service/: axum_router.rs  durable_object.rs  mod.rs
app/src/utils/: err_wrapper.rs  mod.rs  use_game_id.rs  use_websocket.rs
assets/: .assetsignore  _routes.json  _worker.js  registry.json
assets/animated/: Armabee Evolved.glb  Armabee.glb  Birb.glb  Blue Demon.glb  Bunny.glb  Cat.glb  Chicken.glb  Demon.glb  Dino.glb  Dragon Evolved.glb  Dragon.glb  Frog.glb  Goleling.glb  Mushnub.glb  Mushroom King.glb  Orc Enemy.glb  Orc.glb  (+1 more)
client/: Cargo.toml
client/assets/animated/: Alien-RRliSQBP7r.glb  Ghost Skull.glb  Ghost.glb  Glub Evolved.glb  Glub.glb  Goleling Evolved.glb  Hywirl.glb  Monkroose.glb  Ninja-xGYmeDpfTu.glb  Pigeon.glb  Pink Blob.glb  Squidle.glb  Wizard.glb
client/src/: main.rs
client/src/async_task/: mod.rs
client/src/fetch_data/: mod.rs
client/src/main_menu/: mod.rs
client/src/plugins/: mod.rs
client/src/plugins/animation_link/: mod.rs
client/src/plugins/asset_loader/: mod.rs
client/src/plugins/async_task/: mod.rs
client/src/plugins/fetch_data/: mod.rs
client/src/plugins/menus/: join_menu.rs  mod.rs
client/src/plugins/monster/: mod.rs
core/: Cargo.toml
end2end/: example.spec.ts
game/: Cargo.toml
game/assets/: Scene.glb  all.assets.ron
game/assets/cubemap_01/: diffuse_map_rgb9e5.ktx2
game/assets/library_back/: Monster_Alien.glb  Monster_Chicken.glb  Monster_Green_Spiky.glb  Monster_Pink_Slime.glb  Planet_6.glb  Platform_4x1.glb
game/src/: animation_link.rs  delayed_command.rs  event_stream.rs  lib.rs  main.rs  mod.rs  monster.rs  music.rs  plugins.rs  scenes.rs  setup.rs  skinned_mesh.rs
game/src/plugins/: animation_link.rs  delayed_command.rs  event_stream.rs  mod.rs  monster.rs  music.rs  planets.rs  scenes.rs  spectators.rs
game/src/plugins/monster/: mod.rs
game/src/plugins/scenes/: lobby.rs  mod.rs  pregame.rs  race.rs  results.rs  summary.rs
game/src/scenes/: lobby.rs  pregame.rs  race.rs  results.rs
macros/: Cargo.toml
public/: index.html
server/: Cargo.toml
server/src/: app.rs  durable_object.rs  lib.rs  main.rs  session_id.rs  sessions.rs
server/src/components/layouts/: mod.rs  vertical_stack.rs
server/src/components/molecules/: mod.rs  text_input.rs
server/src/durable_objects/: event_log.rs  game.rs  mod.rs  sessions.rs
server/src/handlers/: create_game.rs  forward_command.rs  join_game.rs  mod.rs  on_connect.rs  register_command.rs
server/src/models/: events.rs  game_id.rs  join_code.rs  mod.rs  monsters.rs  room.rs  user.rs
server/src/models/commands/: change_profile.rs  create_game.rs  join_game.rs  mod.rs  place_bets.rs  ready_player.rs
server/src/models/projections/: mod.rs
server/src/screens/: game_wrapper.rs  host_lobby.rs  join_screen.rs  main_menu.rs  mod.rs  player_lobby.rs  player_pregame.rs  router.rs
server/src/screens/host/: lobby.rs  mod.rs  pre_game.rs  race.rs
server/src/screens/player/: join.rs  lobby.rs  mod.rs  pregame.rs  race.rs
server/src/server_fns/: mod.rs
server/src/utils/: err_wrapper.rs  generate_game_id.rs  mod.rs  use_game_id.rs  use_websocket.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs  test.rs  time.rs
shared/src/models/: cards.rs  commands.rs  events.rs  game_code.rs  game_id.rs  mod.rs  monsters.rs  process_managers.rs  processors.rs  projections.rs
shared/src/models/commands/: borrow_money.rs  buy_card.rs  change_profile.rs  create_game.rs  finish_game.rs  finish_race.rs  join_game.rs  mod.rs  place_bets.rs  play_card.rs  ready_player.rs  start_game.rs  start_race.rs  start_round.rs
shared/src/models/process_managers/: finish_game.rs  finish_race.rs  start_game.rs  start_race.rs  start_round.rs
shared/src/models/processors/: finish_game.rs  finish_race.rs  mod.rs  race_timeout.rs  start_game.rs  start_race.rs  start_round.rs
shared/src/models/projections/: mod.rs  race.rs
simulation/: Cargo.toml
simulation/assets/: Scene.glb  all.assets.ron  registry.json
simulation/assets/animated/: Alpaking Evolved.glb  Alpaking.glb  Cactoro-IGn9lhdama.glb  Fish-ypEYhCImAB.glb  Fish.glb  Green Blob.glb  Ninja.glb  Yeti-ceRHrn8HHE.glb
simulation/assets/library_back/: Marker.glb  Monster_Cactoro.glb  Monster_Mushnub.glb  Planet_11.glb  Planet_3.glb  Platform_4x4.glb
simulation/src/: lib.rs  main.rs  setup.rs
simulation/src/plugins/: animation_link.rs  event_stream.rs  mod.rs  planets.rs  skinned_mesh.rs  spectators.rs
simulation/src/plugins/asset_loader/: mod.rs
simulation/src/plugins/fetch_data/: mod.rs
simulation/src/plugins/menus/: components.rs  main_menu.rs
simulation/src/plugins/monster/: mod.rs
simulation/src/plugins/pallet/: mod.rs
simulation/src/plugins/scenes/: lobby.rs  mod.rs  pregame.rs  race.rs
src/: main.rs
(+7 files in other folders)
