[workspace]
members = ["simulation", "server", "shared", "macros"]
resolver = "2"

[workspace.dependencies]
shared = { path = "./shared", version = "0.1.0" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# lto = true
opt-level = 's'
# strip = true

[[workspace.metadata.leptos]]
name = "deep-space-derby"

bin-package = "server"
bin-target-tripple = "wasm32-unknown-unknown"
bin-exe-name = "server.wasm"
bin-features = ["ssr"]

lib-package = "server"
lib-features = ["hydrate"]

site-root = "site"
assets-dir = "assets"

site-addr = "127.0.0.1:8788"
reload-port = 3001

[patch.crates-io]
bevy_editor_pls = { git = "https://github.com/zhaop/bevy_editor_pls.git", branch = "bevy-0.14" }
