[workspace]
members = ["game", "app", "shared", "macros"]
resolver = "2"

[workspace.dependencies]
shared = { path = "./shared", version = "0.1.0" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# strip = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
# strip = true
