[workspace]
members = ["game", "app", "shared", "macros"]
resolver = "2"

[workspace.dependencies]
shared = { path = "./shared", version = "0.1.0" }
rand = "0.8"
anyhow = "1"
im = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
tracing = "0.1"
getrandom = { version = "0.2.16", features = ["js"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
getrandom_v03 = { package = "getrandom", version = "0.3", features = [
    "wasm_js",
] }
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = true
# strip = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
strip = true
debug = false

[profile.dev.package.bevy_ecs]
debug-assertions = false

[[workspace.metadata.leptos]]
name = "deep-space-derby"

bin-package = "app"
bin-target = "server"
bin-default-features = false
bin-exe-name = "server"
bin-features = ["ssr", "native"]


lib-package = "app"
lib-default-features = false
lib-features = ["hydrate"]

site-addr = "127.0.0.1:8000"
