[package]
edition = "2021"
name = "app"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.79"
axum = { version = "0.7", default-features = false, optional = true, features = [
  "macros",
  "form",
  "json",
  "original-uri",
] }
axum-extra = { version = "0.9.3", default-features = false, optional = true, features = [
  "cookie",
  "tracing",
] }
axum-server = { version = "0.7.1", optional = true, features = ["tls-rustls"] }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
cookie = "0.18.0"
futures = "0.3.30"
futures-util = { version = "0.3.28", default-features = false }
gloo-net = "0.5.0"
http = "1.1.0"
im = "15.1.0"
js-sys = "0.3.67"
leptos = { version = "0.6.10", default-features = false, features = [
  "nightly",
] }
leptos_axum = { version = "0.6.10", default-features = false, optional = true }
leptos_meta = { version = "0.6.10", default-features = false, features = [
  "nightly",
] }
leptos_router = { version = "0.6.10", default-features = false, features = [
  "nightly",
] }
leptos-use = "0.10.6"
macros = { path = "../macros" }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde = "1.0.195"
serde_json = "1.0.111"
serde-wasm-bindgen = "0.6.3"
shared = { workspace = true }
tokio = { version = "1.39.2", optional = true }
tower = "0.4.13"
tower-http = { version = "0.5.2", optional = true }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4", "js", "serde"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.67", features = ["HtmlDocument"] }
worker = { version = "0.3.1", features = ["http", "axum"], optional = true }
worker-macros = { version = "0.3.1", features = ["http"], optional = true }

[features]
default = ["ssr", "native"]
wasm = ["dep:worker", "dep:worker-macros", "shared/wasm"]
native = [
  "dep:tokio",
  "dep:tower-http",
  "dep:axum-server",
  "axum/ws",
  "axum/tokio",
  "axum/http1",
  "tokio/rt-multi-thread",
  "leptos_axum/default",
  "tower-http/fs",
  "tower-http/trace",
]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "shared/wasm",
]
ssr = [
  "dep:axum",
  "dep:axum-extra",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
