[package]
edition = "2021"
name = "app"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", default-features = false, optional = true, features = [
  "macros",
  "form",
  "json",
  "original-uri",
] }
axum-extra = { version = "0.9", default-features = false, optional = true, features = [
  "cookie",
  "tracing",
] }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
cookie = "0.18.0"
futures = "0.3.30"
futures-util = { version = "0.3.28", default-features = false }
gloo-net = "0.5.0"
http = "1.1.0"
im = { version = "15.1.0", features = ["serde"] }
js-sys = "0.3.67"
leptos = { version = "0.7", default-features = false, features = ["nightly"] }
leptos_axum = { version = "0.7", default-features = false, optional = true }
leptos_meta = { version = "0.7", default-features = false, features = [] }
leptos_router = { version = "0.7", default-features = false, features = [
  "nightly",
] }
leptos-use = "0.14"
macros = { path = "../macros" }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde = "1.0.195"
serde_json = "1.0.111"
serde-wasm-bindgen = "0.6.3"
shared = { workspace = true }
tower = "0.4.13"
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4", "js", "serde"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.67", features = ["HtmlDocument", "ViewTransition"] }
gloo-utils = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.39.2" }
tower-http = { version = "0.5.2" }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.3.1", features = ["http", "axum"] }
worker-macros = { version = "0.3.1", features = ["http"] }

[features]
default = ["ssr", "native"]
native = [
  "axum/ws",
  "axum/tokio",
  "axum/http1",
  "tokio/rt-multi-thread",
  "leptos_axum/default",
  "tower-http/fs",
  "tower-http/trace",
]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:axum-extra",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
