[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.21.0"
bevy_asset_loader = { version = "0.19.1", features = ["progress_tracking"] }
iyes_progress = { version = "0.10.0", features = ["assets"] }
rand = "0.8.5"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "default-tls"] }
statig = { version = "0.3.1", features = ["bevy"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies.ezsockets]
version = "0.6.1"

[target.'cfg(target_family = "wasm")'.dependencies.ezsockets]
version = "0.6.1"
default-features = false
features = ["wasm_client"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
