[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-inspector-egui = { version = "0.28", optional = true }
bevy_asset_loader = { version = "0.22", features = [
  "progress_tracking",
  "standard_dynamic_assets",
] }
macros = { path = "../macros" }
bevy_tweening = "0.12.0"
iyes_progress = { version = "0.13", features = ["assets"] }
rand = "0.8.5"
wasm-bindgen = "0.2"
web-sys = "0.3"
shared = { workspace = true }
im = "15.1.0"
serde = "1"
serde_json = "1"
anyhow = "1"
bevy_kira_audio = { version = "0.21", features = ["ogg"] }

[dependencies.bevy]
features = [
  "android-game-activity",
  "android_shared_stdcxx",
  "animation",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "vorbis",
  "webgpu",
  "x11",
]
version = "0.15"
default-features = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tungstenite = { version = "0.24.0", features = ["rustls"] }

[features]
debug = ["dep:bevy-inspector-egui"]
