[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bevy-inspector-egui = { version = "0.32", optional = true }
bevy_asset_loader = { version = "0.23", features = [
    "progress_tracking",
    "standard_dynamic_assets",
] }
bevy_kira_audio = { version = "0.23", features = ["ogg"] }
bevy_tweening = "0.13.0"
im = { workspace = true }
iyes_progress = { version = "0.14", features = ["assets"] }
macros = { path = "../macros" }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
wasm-bindgen = "0.2"
web-sys = "0.3"
getrandom_v02 = { workspace = true }
getrandom_v03 = { workspace = true }

[dependencies.bevy]
features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_winit",
    "hdr",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgpu",
]
version = "0.16"
default-features = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tungstenite = { version = "0.24.0", features = ["rustls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[features]
debug = ["dep:bevy-inspector-egui"]
