[package]
edition = "2021"
name = "server"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "durable_object"
path = "src/bin/durable_object.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "client"

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
cookie = "0.18.0"
futures = "0.3.30"
futures-util = { version = "0.3.28", default-features = false }
gloo-net = "0.5.0"
im = "15.1.0"
js-sys = "0.3.67"
leptos = { version = "0.5.6", default-features = false, features = ["nightly"] }
leptos-cloudflare = { path = "/Users/dylanj/Workspace/github/leptos-cloudflare/leptos-cloudflare", optional = true }
leptos-use = "0.9.0"
leptos_integration_utils = { version = "0.5.5", optional = true }
leptos_meta = { version = "0.5.6", default-features = false }
leptos_reactive = "0.5.7"
leptos_router = { version = "0.5.6", default-features = false }
macros = { path = "../macros" }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde = "1.0.195"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.111"
serde_qs = "0.12.0"
tower = "0.4.13"
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4", "js", "serde"] }
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.67", features = ["HtmlDocument"] }
worker = "0.0.18"
shared = { workspace = true }

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_integration_utils",
  "dep:leptos-cloudflare",
]
