[package]
edition = "2021"
name = "server"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "client"

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
cookie = "0.18.0"
futures = "0.3.30"
futures-util = { version = "0.3.28", default-features = false }
gloo-net = "0.5.0"
im = "15.1.0"
js-sys = "0.3.67"
axum = { version = "0.7", default-features = false, optional = true, features = [
  "macros",
  "form",
  "json",
] }
axum-extra = { version = "0.9.3", default-features = false, optional = true, features = [
  "cookie",
  "tracing",
] }
leptos = { version = "0.6.10", default-features = false, features = [
  "nightly",
] }
leptos-use = "0.10.6"
leptos_axum = { version = "0.6.10", default-features = false, optional = true }
leptos_meta = { version = "0.6.10", default-features = false, features = [
  "nightly",
] }
leptos_router = { version = "0.6.10", default-features = false, features = [
  "nightly",
] }
macros = { path = "../macros" }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde = "1.0.195"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.111"
tower = "0.4.13"
tracing = { version = "0.1.40" }
uuid = { version = "1.7.0", features = ["v4", "js", "serde"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.67", features = ["HtmlDocument"] }
worker = { version = "0.3", features = ["http"] }
worker-macros = { version = "0.3", features = ["http"] }
shared = { workspace = true }
async-trait = "0.1.79"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.11.27", features = ["blocking"] }

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:axum",
  "dep:axum-extra",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
