[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
im = "15.1.0"
macros = { path = "../macros" }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4", "serde", "js"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
tracing = "0.1.40"
anyhow = "1.0.86"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = { version = "1.1.0" }

[dev-dependencies]
tracing-subscriber = "0.3.18"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
