[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
im = { workspace = true }
macros = { path = "../macros" }
rand = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
uuid = { version = "1", features = ["serde", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_v02 = { workspace = true }
getrandom_v03 = { workspace = true }
web-time = { version = "1.1.0" }


[dev-dependencies]
tracing-subscriber = "0.3.18"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
