[package]
name = "simulation"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13" }
bevy-inspector-egui = "0.23.3"
bevy_asset_loader = { version = "0.20", features = [
  "progress_tracking",
  "standard_dynamic_assets",
] }
macros = { path = "../macros" }
bevy_gltf_blueprints = "0.10.2"
bevy_gltf_components = "0.5.1"
bevy_registry_export = "0.3.1"
bevy_tweening = "0.10.0"
crossbeam-channel = "0.5.11"
iyes_progress = { version = "0.11.0", features = ["assets"] }
lazy_static = "1.4.0"
rand = "0.8.5"
wasm-bindgen = "0.2"
web-sys = "0.3"
shared = { workspace = true }
# bevy_editor_pls = "0.7.0"


[features]
default = ["bevy/dynamic_linking"]
