[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", features = ["webgpu"] }
bevy-inspector-egui = { version = "0.25", optional = true }
bevy_asset_loader = { version = "0.21", features = [
  "progress_tracking",
  "standard_dynamic_assets",
] }
macros = { path = "../macros" }
# blenvy = { version = "0.1.0", git = "https://github.com/kaosat-dev/Blender_bevy_components_workflow", rev = "6bc0ec078232b20c2d864bd32872d59e3dece7a2" }
bevy_tweening = "0.11.0"
crossbeam-channel = "0.5.11"
iyes_progress = { version = "0.12.0", features = ["assets"] }
rand = "0.8.5"
wasm-bindgen = "0.2"
web-sys = "0.3"
shared = { workspace = true }
im = "15.1.0"
serde = "1.0.204"
serde_json = "1.0.120"


[features]
default = ["bevy/dynamic_linking"]
debug = ["dep:bevy-inspector-egui"]
